package com.example.DTO;

public class GameDTO {
    private String equipaA;
    private String equipaB;
    private String resultado;
    private String data;
}
